<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Ap_InputLayout"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Ap_text"
        app:layout_constraintTop_toBottomOf="@+id/Wp_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Ap_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Ap_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Ap_text"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Ap_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Wp_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Wp_InputLayout"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Wp_text"
        app:layout_constraintTop_toBottomOf="@+id/Op_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Wp_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Wp_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Wp_text"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Wp_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Op_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Op_InputLayout"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Op_text"
        app:layout_constraintTop_toBottomOf="@+id/Np_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Op_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Op_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Op_text"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Op_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Np_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Np_InputLayout"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Np_text"
        app:layout_constraintTop_toBottomOf="@+id/Sp_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Np_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Np_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Np_text"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Np_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sp_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Sp_InputLayout"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Sp_text"
        app:layout_constraintTop_toBottomOf="@+id/Cp_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sp_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Sp_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Sp_text"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Sp_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cp_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Cp_InputLayout"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Cp_text"
        app:layout_constraintTop_toBottomOf="@+id/Hp_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Cp_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Cp_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Cp_text"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="29dp"
        android:padding="8dp"
        android:text="@string/Cp_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hp_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Hp_InputLayout"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Hp_text"
        app:layout_constraintTop_toBottomOf="@+id/Title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Hp_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Hp_Input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Hp_text"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="25dp"
        android:padding="8dp"
        android:text="@string/Hp_text"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="356dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:text="@string/Title"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SubmitBtn"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="50dp"
        android:capitalize="none"
        android:text="@string/SubmitBtnText"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ap_text" />

</androidx.constraintlayout.widget.ConstraintLayout>